# morTimmy

./: .gitignore  BUY_STUFF.md  Cargo.toml  HowToMakeProductionHardware.md  README.md  TODO.md  kopen.md  random_ideas.md  rust-toolchain.toml  tmpnewpormpt.md
.cargo/: config.toml
.github/: AGENTS.md
.github/skills/embedded-rust-programs/: SKILL.md
.github/skills/embedded-rust-programs/reference/: desired-control.md  driver-traits.md  state-machines.md  typestate.md
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  limits.rs  mode.rs  units.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: lib.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: lib.rs
crates/drivers/src/actuators/: mod.rs  motor.rs  servo.rs
crates/drivers/src/actuators/motor/: l298n.rs  mod.rs
crates/drivers/src/sensors/: mod.rs  ultrasonic.rs
crates/drivers/src/sensors/ultrasonic/: hc_sr04.rs
crates/drivers/src/ui/: audio.rs  mod.rs  trellis.rs
crates/drivers/src/ui/audio/: pico_audio_pack.rs
crates/drivers/src/ui/display/: hd44780.rs  mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: checksum.rs  codec.rs  framing.rs  lib.rs
crates/protocol/src/messages/: audio.rs  battery.rs  command.rs  controller.rs  desired_state.rs  drive.rs  host.rs  ids.rs  mod.rs  range.rs  servo.rs  status.rs  telemetry.rs  trellis_pad.rs  wire.rs
crates/protocol/src/messages/commands/: audio.rs  desired_state.rs  drive.rs  mod.rs  parameter.rs  servo.rs  trellis_led.rs
crates/protocol/src/messages/telemetry/: audio.rs  capabilities.rs  desired_state.rs  drive.rs  range.rs  servo.rs  status.rs  trellis_pad.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: architecture.md  protocol.md
docs/src/hardware/: components.md  design.md  index.md
docs/src/hardware/components/TB6612FNG motor driver/: index.md
docs/src/hardware/components/hc-sr04/: index.md
docs/src/hardware/components/l298n-stepper-motor-driver/: index.md
docs/src/hardware/components/liquid-crystal-display/: index.md
docs/src/hardware/components/motors/: index.md
docs/src/hardware/components/pi-audio-hat/: index.md
docs/src/hardware/components/pimorido pico 2 lipo/: index.md
docs/src/hardware/components/power/: index.md
docs/src/hardware/components/raspberry-pi-3b/: index.md
docs/src/hardware/components/servos/: index.md
docs/src/hardware/schematics/: pcb.md  wiring.md
firmware/rp2350/: Cargo.toml  build.rs  memory.x
firmware/rp2350/src/: board.rs  control.rs  lib.rs  link_rx.rs  link_tx.rs  main.rs  usb.rs
firmware/rp2350/src/actuators/: drive.rs  mod.rs  servo.rs
firmware/rp2350/src/runtime/: audio.rs  mod.rs  motion.rs
firmware/rp2350/src/sensors/: battery.rs  mod.rs  ultrasonic.rs
firmware/rp2350/src/ui/: audio.rs  display.rs  mod.rs  trellis.rs
host/mortimmy/: Cargo.toml
host/mortimmy/src/: main.rs  routing.rs  ui.rs
host/mortimmy/src/app/: mod.rs  test_runner.rs
host/mortimmy/src/audio/: mod.rs
host/mortimmy/src/brain/: autonomy.rs  command.rs  command_mapping.rs  mod.rs  robot.rs
host/mortimmy/src/brain/transport/: loopback.rs  mod.rs  serial.rs
host/mortimmy/src/camera/: mod.rs
host/mortimmy/src/cli/: base.rs  config.rs  mod.rs  ping.rs  start.rs  test.rs
host/mortimmy/src/config/: mod.rs
host/mortimmy/src/input/: gamepad.rs  keyboard.rs  mod.rs  registry.rs  scripted.rs  source.rs  websocket.rs
host/mortimmy/src/nexo/: mod.rs
host/mortimmy/src/serial/: mod.rs
host/mortimmy/src/telemetry/: mod.rs
host/mortimmy/src/tui/: app.rs  commands.rs  completion.rs  files.rs  message.rs  mod.rs  model.rs  session.rs  terminal.rs  update.rs  view.rs
host/mortimmy/src/websocket/: mod.rs
host/tools/: Cargo.toml
host/tools/src/: cli.rs  inspect.rs  main.rs  replay.rs  tracing_support.rs
host/tools/src/deploy/: bootsel.rs  cli.rs  context.rs  firmware.rs  host.rs  mod.rs  probe.rs  process.rs  uf2.rs
integration_test/: Cargo.toml  hardware.example.toml
integration_test/src/: config.rs  lib.rs
integration_test/tests/: hardware_config_example.rs  hardware_smoke.rs  protocol_roundtrip.rs
mortimmy/: mortimmy.kicad_sch
old/: .gitmodules  CHANGELOG.md  README.md  TODO.md
old/arduino/: README.md  TODO.md  install-inotool.txt
old/arduino/morTimmy/: L298N_motor_driver.h  bluetooth_remote_control.h  crc32.h  distance_sensor.h  morTimmy.ino  motor_driver.h  newping_distance_sensor.h  raspberry_control.h  remote_control.h
old/raspberrypi/: README.md  setup.py
old/raspberrypi/morTimmy/: bluetooth_remote_control.py  hardware_controller.py  morTimmy.py  remote_control.py
schematics/PCB/: .gitignore  index.circuit.tsx  package.json  tscircuit.config.json  tsconfig.json
schematics/kicad/: mortimmy.kicad_pcb  mortimmy.kicad_prl  mortimmy.kicad_pro  mortimmy.kicad_sch  mortimmy.kicad_sym  ~mortimmy.kicad_pro.lck
schematics/pcb/: mortimmy.kicad_sym
schematics/wiring/: drive_and_sensors.yml  mortimmy.yml
scripts/: book.sh  deploy.sh
tmp/: brain-loopback.toml
