[workspace]
members = [
    "crates/core",
    "crates/deploy",
    "crates/drivers",
    "crates/protocol",
    "firmware/rp2350",
    "host/mortimmy",
    "host/tools",
    "integration_test",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cobs = { version = "0.2", default-features = false }
crc = "3.2"
crossterm = "0.28"
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
defmt-decoder = "1.0"
dirs = "6"
embedded-hal = "1.0"
heapless = { version = "0.8", features = ["serde"] }
nokhwa = "0.10"
object = { version = "0.37", default-features = false, features = [
    "elf",
    "read_core",
] }
postcard = { version = "1.1", default-features = false }
probe-rs = { version = "0.30", features = ["builtin-targets"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = "1.0"
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-serial = "5.4"
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# [workspace.lints.rust]
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html
codegen-units = 1
lto = "fat"

# This will enable debug symbols in the release build making it increase in size.
# It will not slow down the actual release. Still for running in containers, it
# would be good if we can disable this when pushing to Container registry.
debug = true
