[workspace]
members = [
    "crates/core",
    "crates/deploy",
    "crates/drivers",
    "crates/protocol",
    "firmware/rp2350",
    "host/mortimmy",
    "host/tools",
    "integration_test",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
cobs = { version = "0", default-features = false }
crc = "3"
crossterm = "0"
cortex-m = "0"
cortex-m-rt = "0"
defmt = "1"
defmt-rtt = "1"
defmt-decoder = "1"
dirs = "6"
embedded-hal = "1"
heapless = { version = "0", features = ["serde"] }
hidapi = "2"
gilrs = "0"
nokhwa = "0"
object = { version = "0", default-features = false, features = [
    "elf",
    "read_core",
] }
postcard = { version = "1", default-features = false }
probe-rs = { version = "0", features = ["builtin-targets"] }
ratatui = { version = "0.29", default-features = false, features = [
    "crossterm",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
toml = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-serial = "5"
tokio-tungstenite = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "fmt"] }

# [workspace.lints.rust]
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html
codegen-units = 1
lto = "fat"

# This will enable debug symbols in the release build making it increase in size.
# It will not slow down the actual release. Still for running in containers, it
# would be good if we can disable this when pushing to Container registry.
debug = true
