[package]
name = "mortimmy-integration-test"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
heapless.workspace = true
mortimmy-core = { path = "../crates/core" }
mortimmy-protocol = { path = "../crates/protocol" }
mortimmy-rp2350 = { path = "../firmware/rp2350" }
serde = { workspace = true, features = ["std"] }
tokio.workspace = true
tokio-serial.workspace = true
toml.workspace = true
