[package]
name = "mortimmy-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["capability-drive", "capability-servo"]
capability-drive = []
capability-servo = []

[dependencies]
cobs.workspace = true
crc.workspace = true
heapless.workspace = true
mortimmy-core = { path = "../core" }
postcard.workspace = true
serde.workspace = true
