[package]
name = "mortimmy-rp2350"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "mortimmy-rp2350"
path = "src/main.rs"

[dependencies]
mortimmy-core = { path = "../../crates/core" }
mortimmy-deploy = { path = "../../crates/deploy" }
mortimmy-drivers = { path = "../../crates/drivers" }
mortimmy-protocol = { path = "../../crates/protocol" }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-executor = { version = "0.7", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-futures = "0.1"
embassy-rp = { version = "0.3", features = [
    "critical-section-impl",
    "defmt",
    "rp235xb",
    "time-driver",
] }
embassy-time = { version = "0.4", features = ["defmt"] }
embassy-usb = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"

[dev-dependencies]
heapless.workspace = true
