[package]
name = "mortimmy-rp2350"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "mortimmy-rp2350"
path = "src/main.rs"

[features]
default = ["board-motion-controller"]
board-motion-controller = [
    "capability-drive",
    "capability-servo",
    "driver-l298n",
    "sensor-ultrasonic",
]
board-audio-controller = ["capability-audio-output", "ui-display"]
capability-drive = ["mortimmy-protocol/capability-drive"]
capability-servo = ["mortimmy-protocol/capability-servo"]
capability-audio-output = []
driver-l298n = []
sensor-ultrasonic = []
sensor-battery = []
ui-display = []

[dependencies]
mortimmy-core = { path = "../../crates/core" }
mortimmy-deploy = { path = "../../crates/deploy" }
mortimmy-drivers = { path = "../../crates/drivers" }
mortimmy-protocol = { path = "../../crates/protocol", default-features = false }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-executor = { version = "0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-futures = "0"
embassy-rp = { version = "0", features = [
    "critical-section-impl",
    "defmt",
    "rp235xb",
    "time-driver",
] }
embassy-time = { version = "0", features = ["defmt"] }
embassy-usb = "0"
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2"

[dev-dependencies]
heapless.workspace = true
