[package]
name = "mortimmy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mortimmy"
path = "src/main.rs"

[features]
default = []
camera-nokhwa = ["dep:nokhwa"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
heapless.workspace = true
mortimmy-core = { path = "../../crates/core" }
mortimmy-protocol = { path = "../../crates/protocol" }
mortimmy-rp2350 = { path = "../../firmware/rp2350" }
nokhwa = { workspace = true, optional = true }
serde = { workspace = true, features = ["std"] }
tokio.workspace = true
tokio-serial.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
