[package]
name = "mortimmy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mortimmy"
path = "src/main.rs"

[features]
default = []
camera-nokhwa = ["dep:nokhwa"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
gilrs.workspace = true
heapless.workspace = true
hidapi.workspace = true
mortimmy-core = { path = "../../crates/core" }
mortimmy-protocol = { path = "../../crates/protocol" }
mortimmy-rp2350 = { path = "../../firmware/rp2350" }
nexo-ws-client = { path = "../../../nexo/shared/nexo-ws-client" }
nexo-ws-schema = { path = "../../../nexo/shared/nexo-ws-schema" }
nokhwa = { workspace = true, optional = true }
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
tokio.workspace = true
tokio-serial.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
